Add support for Java preview features