@@ -6,10 +6,11 @@ import net.bnb1.kradle.features.Blueprint
 import net.bnb1.kradle.features.general.BootstrapFeature
 import net.bnb1.kradle.propertiesRegistry
 import org.gradle.api.GradleException
-import org.gradle.api.JavaVersion
 import org.gradle.api.Project
 import org.gradle.api.plugins.JavaPlugin
 import org.gradle.api.plugins.JavaPluginExtension
+import org.gradle.api.tasks.compile.JavaCompile
+import org.gradle.kotlin.dsl.withType
 
 class JavaBlueprint(project: Project) : Blueprint(project) {
 
@@ -42,13 +43,16 @@ class JavaBlueprint(project: Project) : Blueprint(project) {
     }
 
     override fun configure() {
-        val properties = project.propertiesRegistry.get<JvmProperties>()
-        val javaExtension = project.extensions.getByType(JavaPluginExtension::class.java)
+        val jvmProperties = project.propertiesRegistry.get<JvmProperties>()
+        project.tasks.withType<JavaCompile> {
+            options.release.set(Integer.parseInt(jvmProperties.targetJvm.get()))
+        }
 
-        if (!javaExtension.toolchain.languageVersion.isPresent) {
-            val javaVersion = JavaVersion.toVersion(properties.targetJvm.get())
-            javaExtension.sourceCompatibility = javaVersion
-            javaExtension.targetCompatibility = javaVersion
+        val javaProperties = project.propertiesRegistry.get<JavaProperties>()
+        if (javaProperties.withPreviewFeatures.get()) {
+            project.tasks.withType<JavaCompile> {
+                options.compilerArgs.add("--enable-preview")
+            }
         }
     }
 }
